// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateTypings given an empty openapi schema should match clientStore snapshot 1`] = `""`;

exports[`GenerateTypings given an empty openapi schema should match typeStore snapshot 1`] = `""`;

exports[`GenerateTypings given the Petstore Expanded schema FetchClientFormatter should match clientStore snapshot 1`] = `
"const fetch = require('node-fetch')
const FindPets = async (payload: FindPetsRequest):Promise<FindPetsResult> => fetch({
      method: \\"get\\",
    }).then((res:any) => res.json())
const AddPet = async (payload: AddPetRequest):Promise<AddPetResult> => fetch({
      method: \\"post\\",
    }).then((res:any) => res.json())
const FindPetById = async (payload: FindPetByIdRequest):Promise<FindPetByIdResult> => fetch({
      method: \\"get\\",
    }).then((res:any) => res.json())
const DeletePet = async (payload: DeletePetRequest):Promise<DeletePetResult> => fetch({
      method: \\"delete\\",
    }).then((res:any) => res.json())"
`;

exports[`GenerateTypings given the Petstore Expanded schema FetchClientFormatter should match typeStore snapshot 1`] = `
"export type Pet = NewPet & {
  id: number;
  [k: string]: any;
};

export interface NewPet {
  name: string;
  tag?: string;
  [k: string]: any;
}

export interface Error {
  code: number;
  message: string;
  [k: string]: any;
}

export interface FindPetsRequest {
  tags: string[]
  limit: number
}
export type FindPetsResult = (Pet)[];

export type FindPetsFallback = Error;

export type FindPets = (payload: FindPetsRequest) => Promise<FindPetsResult>;
export type AddPetRequest = NewPet;
export type AddPetResult = Pet;

export type AddPetFallback = Error;

export type AddPet = (payload: AddPetRequest) => Promise<AddPetResult>;
export interface FindPetByIdRequest {
  id: number
}
export type FindPetByIdResult = Pet;

export type FindPetByIdFallback = Error;

export type FindPetById = (payload: FindPetByIdRequest) => Promise<FindPetByIdResult>;
export interface DeletePetRequest {
  id: number
}
export interface DeletePetResult { /* unknown */ }
export type DeletePetFallback = Error;

export type DeletePet = (payload: DeletePetRequest) => Promise<DeletePetResult>;"
`;

exports[`GenerateTypings given the Petstore Expanded schema should match clientStore snapshot 1`] = `""`;

exports[`GenerateTypings given the Petstore Expanded schema should match typeStore snapshot 1`] = `
"export type Pet = NewPet & {
  id: number;
  [k: string]: any;
};

export interface NewPet {
  name: string;
  tag?: string;
  [k: string]: any;
}

export interface Error {
  code: number;
  message: string;
  [k: string]: any;
}

export interface FindPetsRequest {
  tags: string[]
  limit: number
}
export type FindPetsResult = (Pet)[];

export type FindPetsFallback = Error;

export type AddPetRequest = NewPet;
export type AddPetResult = Pet;

export type AddPetFallback = Error;

export interface FindPetByIdRequest {
  id: number
}
export type FindPetByIdResult = Pet;

export type FindPetByIdFallback = Error;

export interface DeletePetRequest {
  id: number
}
export interface DeletePetResult { /* unknown */ }
export type DeletePetFallback = Error;
"
`;

exports[`GenerateTypings given the Petstore schema should match clientStore snapshot 1`] = `""`;

exports[`GenerateTypings given the Petstore schema should match typeStore snapshot 1`] = `
"export interface Pet {
  id: number;
  name: string;
  tag?: string;
  [k: string]: any;
}

export type Pets = (Pet)[];

export interface Error {
  code: number;
  message: string;
  [k: string]: any;
}

export interface ListPetsRequest {
  limit: number
}
export type ListPetsResult = Pets;

export type ListPetsFallback = Error;

export interface CreatePetsRequest {
}
export interface CreatePetsResult { /* unknown */ }
export type CreatePetsFallback = Error;

export interface ShowPetByIdRequest {
  petId: string
}
export type ShowPetByIdResult = Pets;

export interface ShowPetById204 { /* unknown */ }
export type ShowPetByIdFallback = Error;
"
`;
